ap_project/src/it/units/project/support/antlr/grammar/RequestGrammarParser.java
// Generated from /Users/biagiolicari/Documents/TEST/ap_project_LicariTEST/Math_Expression_Server/src/it/units/project/support/antlr/RequestGrammar.g4 by ANTLR 4.9.1
package it.units.project.support.antlr.grammar;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RequestGrammarParser extends Parser {
  public static final int
		  T__0 = 1, T__1 = 2, T__2 = 3, BYE = 4, STAT_REQS = 5, STAT_AVG_TIME = 6, STAT_MAX_TIME = 7,
		  GRID = 8, LIST = 9, MIN = 10, MAX = 11, AVG = 12, COUNT = 13, PAR_OPEN = 14, PAR_CLOSE = 15,
		  OP_ADD = 16, OP_MINUS = 17, OP_MUL = 18, OP_DIV = 19, OP_POW = 20, UNDER = 21, SEMI_COLUMN = 22,
		  COLUMN = 23, COMMA = 24, DIGIT = 25, LETTER = 26;
  public static final int
		  RULE_parse = 0, RULE_command = 1, RULE_quitRequest = 2, RULE_statRequest = 3,
		  RULE_statReqsCommand = 4, RULE_statAvgCommand = 5, RULE_statMaxCommand = 6,
		  RULE_computationRequest = 7, RULE_computationKind = 8, RULE_valuesKind = 9,
		  RULE_variableValuesFunction = 10, RULE_variableValues = 11, RULE_variableLowerValue = 12,
		  RULE_variableStepValue = 13, RULE_variableUpperValue = 14, RULE_javaNumber = 15,
		  RULE_javaNumberExponential = 16, RULE_javaNumberSign = 17, RULE_expressions = 18,
		  RULE_expression = 19, RULE_operator = 20, RULE_variable = 21, RULE_number = 22;
  public static final String[] ruleNames = makeRuleNames();
  /**
   * @deprecated Use {@link #VOCABULARY} instead.
   */
  @Deprecated
  public static final String[] tokenNames;
  public static final ATN _ATN =
		  new ATNDeserializer().deserialize(_serializedATN.toCharArray());
  protected static final DFA[] _decisionToDFA;
  protected static final PredictionContextCache _sharedContextCache =
		  new PredictionContextCache();
  private static final String[] _LITERAL_NAMES = makeLiteralNames();
  private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
  public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  static {
	RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION);
  }

  static {
	tokenNames = new String[_SYMBOLIC_NAMES.length];
	for (int i = 0; i < tokenNames.length; i++) {
	  tokenNames[i] = VOCABULARY.getLiteralName(i);
	  if (tokenNames[i] == null) {
		tokenNames[i] = VOCABULARY.getSymbolicName(i);
	  }

	  if (tokenNames[i] == null) {
		tokenNames[i] = "<INVALID>";
	  }
	}
  }

  static {
	_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
	for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
	  _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
	}
  }

  public RequestGrammarParser(TokenStream input) {
	super(input);
	_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  private static String[] makeRuleNames() {
	return new String[]{
			"parse", "command", "quitRequest", "statRequest", "statReqsCommand",
			"statAvgCommand", "statMaxCommand", "computationRequest", "computationKind",
			"valuesKind", "variableValuesFunction", "variableValues", "variableLowerValue",
			"variableStepValue", "variableUpperValue", "javaNumber", "javaNumberExponential",
			"javaNumberSign", "expressions", "expression", "operator", "variable",
			"number"
	};
  }

  private static String[] makeLiteralNames() {
	return new String[]{
			null, "'.'", "'e'", "'E'", null, null, null, null, null, null, null,
			null, null, null, "'('", "')'", "'+'", "'-'", "'*'", "'/'", "'^'", "'_'",
			"';'", "':'", "','"
	};
  }

  private static String[] makeSymbolicNames() {
	return new String[]{
			null, null, null, null, "BYE", "STAT_REQS", "STAT_AVG_TIME", "STAT_MAX_TIME",
			"GRID", "LIST", "MIN", "MAX", "AVG", "COUNT", "PAR_OPEN", "PAR_CLOSE",
			"OP_ADD", "OP_MINUS", "OP_MUL", "OP_DIV", "OP_POW", "UNDER", "SEMI_COLUMN",
			"COLUMN", "COMMA", "DIGIT", "LETTER"
	};
  }

  @Override
  @Deprecated
  public String[] getTokenNames() {
	return tokenNames;
  }

  @Override

  public Vocabulary getVocabulary() {
	return VOCABULARY;
  }

  @Override
  public String getGrammarFileName() {
	return "RequestGrammar.g4";
  }

  @Override
  public String[] getRuleNames() {
	return ruleNames;
  }

  @Override
  public String getSerializedATN() {
	return _serializedATN;
  }

  @Override
  public ATN getATN() {
	return _ATN;
  }

  public final ParseContext parse() throws RecognitionException {
	ParseContext _localctx = new ParseContext(_ctx, getState());
	enterRule(_localctx, 0, RULE_parse);
	try {
	  enterOuterAlt(_localctx, 1);
	  {
		setState(46);
		command();
		setState(47);
		match(EOF);
	  }
	} catch (RecognitionException re) {
	  _localctx.exception = re;
	  _errHandler.reportError(this, re);
	  _errHandler.recover(this, re);
	} finally {
	  exitRule();
	}
	return _localctx;
  }

  public final CommandContext command() throws RecognitionException {
	CommandContext _localctx = new CommandContext(_ctx, getState());
	enterRule(_localctx, 2, RULE_command);
	try {
	  setState(52);
	  _errHandler.sync(this);
	  switch (_input.LA(1)) {
		case BYE:
		  enterOuterAlt(_localctx, 1);
		{
		  setState(49);
		  quitRequest();
		}
		break;
		case STAT_REQS:
		case STAT_AVG_TIME:
		case STAT_MAX_TIME:
		  enterOuterAlt(_localctx, 2);
		{
		  setState(50);
		  statRequest();
		}
		break;
		case MIN:
		case MAX:
		case AVG:
		case COUNT:
		  enterOuterAlt(_localctx, 3);
		{
		  setState(51);
		  computationRequest();
		}
		break;
		default:
		  throw new NoViableAltException(this);
	  }
	} catch (RecognitionException re) {
	  _localctx.exception = re;
	  _errHandler.reportError(this, re);
	  _errHandler.recover(this, re);
	} finally {
	  exitRule();
	}
	return _localctx;
  }

  public final QuitRequestContext quitRequest() throws RecognitionException {
	QuitRequestContext _localctx = new QuitRequestContext(_ctx, getState());
	enterRule(_localctx, 4, RULE_quitRequest);
	try {
	  enterOuterAlt(_localctx, 1);
	  {
		setState(54);
		match(BYE);
	  }
	} catch (RecognitionException re) {
	  _localctx.exception = re;
	  _errHandler.reportError(this, re);
	  _errHandler.recover(this, re);
	} finally {
	  exitRule();
	}
	return _localctx;
  }

  public final StatRequestContext statRequest() throws RecognitionException {
	StatRequestContext _localctx = new StatRequestContext(_ctx, getState());
	enterRule(_localctx, 6, RULE_statRequest);
	try {
	  setState(59);
	  _errHandler.sync(this);
	  switch (_input.LA(1)) {
		case STAT_REQS:
		  enterOuterAlt(_localctx, 1);
		{
		  setState(56);
		  statReqsCommand();
		}
		break;
		case STAT_AVG_TIME:
		  enterOuterAlt(_localctx, 2);
		{
		  setState(57);
		  statAvgCommand();
		}
		break;
		case STAT_MAX_TIME:
		  enterOuterAlt(_localctx, 3);
		{
		  setState(58);
		  statMaxCommand();
		}
		break;
		default:
		  throw new NoViableAltException(this);
	  }
	} catch (RecognitionException re) {
	  _localctx.exception = re;
	  _errHandler.reportError(this, re);
	  _errHandler.recover(this, re);
	} finally {
	  exitRule();
	}
	return _localctx;
  }

  public final StatReqsCommandContext statReqsCommand() throws RecognitionException {
	StatReqsCommandContext _localctx = new StatReqsCommandContext(_ctx, getState());
	enterRule(_localctx, 8, RULE_statReqsCommand);
	try {
	  enterOuterAlt(_localctx, 1);
	  {
		setState(61);
		match(STAT_REQS);
	  }
	} catch (RecognitionException re) {
	  _localctx.exception = re;
	  _errHandler.reportError(this, re);
	  _errHandler.recover(this, re);
	} finally {
	  exitRule();
	}
	return _localctx;
  }

  public final StatAvgCommandContext statAvgCommand() throws RecognitionException {
	StatAvgCommandContext _localctx = new StatAvgCommandContext(_ctx, getState());
	enterRule(_localctx, 10, RULE_statAvgCommand);
	try {
	  enterOuterAlt(_localctx, 1);
	  {
		setState(63);
		match(STAT_AVG_TIME);
	  }
	} catch (RecognitionException re) {
	  _localctx.exception = re;
	  _errHandler.reportError(this, re);
	  _errHandler.recover(this, re);
	} finally {
	  exitRule();
	}
	return _localctx;
  }

  public final StatMaxCommandContext statMaxCommand() throws RecognitionException {
	StatMaxCommandContext _localctx = new StatMaxCommandContext(_ctx, getState());
	enterRule(_localctx, 12, RULE_statMaxCommand);
	try {
	  enterOuterAlt(_localctx, 1);
	  {
		setState(65);
		match(STAT_MAX_TIME);
	  }
	} catch (RecognitionException re) {
	  _localctx.exception = re;
	  _errHandler.reportError(this, re);
	  _errHandler.recover(this, re);
	} finally {
	  exitRule();
	}
	return _localctx;
  }

  public final ComputationRequestContext computationRequest() throws RecognitionException {
	ComputationRequestContext _localctx = new ComputationRequestContext(_ctx, getState());
	enterRule(_localctx, 14, RULE_computationRequest);
	try {
	  enterOuterAlt(_localctx, 1);
	  {
		setState(67);
		computationKind();
		setState(68);
		match(UNDER);
		setState(69);
		valuesKind();
		setState(70);
		match(SEMI_COLUMN);
		setState(71);
		variableValuesFunction();
		setState(72);
		match(SEMI_COLUMN);
		setState(73);
		expressions();
	  }
	} catch (RecognitionException re) {
	  _localctx.exception = re;
	  _errHandler.reportError(this, re);
	  _errHandler.recover(this, re);
	} finally {
	  exitRule();
	}
	return _localctx;
  }

  public final ComputationKindContext computationKind() throws RecognitionException {
	ComputationKindContext _localctx = new ComputationKindContext(_ctx, getState());
	enterRule(_localctx, 16, RULE_computationKind);
	int _la;
	try {
	  enterOuterAlt(_localctx, 1);
	  {
		setState(75);
		_la = _input.LA(1);
		if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MIN) | (1L << MAX) | (1L << AVG) | (1L << COUNT))) != 0))) {
		  _errHandler.recoverInline(this);
		} else {
		  if (_input.LA(1) == Token.EOF) matchedEOF = true;
		  _errHandler.reportMatch(this);
		  consume();
		}
	  }
	} catch (RecognitionException re) {
	  _localctx.exception = re;
	  _errHandler.reportError(this, re);
	  _errHandler.recover(this, re);
	} finally {
	  exitRule();
	}
	return _localctx;
  }

  public final ValuesKindContext valuesKind() throws RecognitionException {
	ValuesKindContext _localctx = new ValuesKindContext(_ctx, getState());
	enterRule(_localctx, 18, RULE_valuesKind);
	int _la;
	try {
	  enterOuterAlt(_localctx, 1);
	  {
		setState(77);
		_la = _input.LA(1);
		if (!(_la == GRID || _la == LIST)) {
		  _errHandler.recoverInline(this);
		} else {
		  if (_input.LA(1) == Token.EOF) matchedEOF = true;
		  _errHandler.reportMatch(this);
		  consume();
		}
	  }
	} catch (RecognitionException re) {
	  _localctx.exception = re;
	  _errHandler.reportError(this, re);
	  _errHandler.recover(this, re);
	} finally {
	  exitRule();
	}
	return _localctx;
  }

  public final VariableValuesFunctionContext variableValuesFunction() throws RecognitionException {
	VariableValuesFunctionContext _localctx = new VariableValuesFunctionContext(_ctx, getState());
	enterRule(_localctx, 20, RULE_variableValuesFunction);
	int _la;
	try {
	  enterOuterAlt(_localctx, 1);
	  {
		setState(79);
		variableValues();
		setState(84);
		_errHandler.sync(this);
		_la = _input.LA(1);
		while (_la == COMMA) {
		  {
			{
			  setState(80);
			  match(COMMA);
			  setState(81);
			  variableValues();
			}
		  }
		  setState(86);
		  _errHandler.sync(this);
		  _la = _input.LA(1);
		}
	  }
	} catch (RecognitionException re) {
	  _localctx.exception = re;
	  _errHandler.reportError(this, re);
	  _errHandler.recover(this, re);
	} finally {
	  exitRule();
	}
	return _localctx;
  }

  public final VariableValuesContext variableValues() throws RecognitionException {
	VariableValuesContext _localctx = new VariableValuesContext(_ctx, getState());
	enterRule(_localctx, 22, RULE_variableValues);
	try {
	  enterOuterAlt(_localctx, 1);
	  {
		setState(87);
		variable();
		setState(88);
		match(COLUMN);
		setState(89);
		variableLowerValue();
		setState(90);
		match(COLUMN);
		setState(91);
		variableStepValue();
		setState(92);
		match(COLUMN);
		setState(93);
		variableUpperValue();
	  }
	} catch (RecognitionException re) {
	  _localctx.exception = re;
	  _errHandler.reportError(this, re);
	  _errHandler.recover(this, re);
	} finally {
	  exitRule();
	}
	return _localctx;
  }

  public final VariableLowerValueContext variableLowerValue() throws RecognitionException {
	VariableLowerValueContext _localctx = new VariableLowerValueContext(_ctx, getState());
	enterRule(_localctx, 24, RULE_variableLowerValue);
	try {
	  enterOuterAlt(_localctx, 1);
	  {
		setState(95);
		javaNumber();
	  }
	} catch (RecognitionException re) {
	  _localctx.exception = re;
	  _errHandler.reportError(this, re);
	  _errHandler.recover(this, re);
	} finally {
	  exitRule();
	}
	return _localctx;
  }

  public final VariableStepValueContext variableStepValue() throws RecognitionException {
	VariableStepValueContext _localctx = new VariableStepValueContext(_ctx, getState());
	enterRule(_localctx, 26, RULE_variableStepValue);
	try {
	  enterOuterAlt(_localctx, 1);
	  {
		setState(97);
		javaNumber();
	  }
	} catch (RecognitionException re) {
	  _localctx.exception = re;
	  _errHandler.reportError(this, re);
	  _errHandler.recover(this, re);
	} finally {
	  exitRule();
	}
	return _localctx;
  }

  public final VariableUpperValueContext variableUpperValue() throws RecognitionException {
	VariableUpperValueContext _localctx = new VariableUpperValueContext(_ctx, getState());
	enterRule(_localctx, 28, RULE_variableUpperValue);
	try {
	  enterOuterAlt(_localctx, 1);
	  {
		setState(99);
		javaNumber();
	  }
	} catch (RecognitionException re) {
	  _localctx.exception = re;
	  _errHandler.reportError(this, re);
	  _errHandler.recover(this, re);
	} finally {
	  exitRule();
	}
	return _localctx;
  }

  public final JavaNumberContext javaNumber() throws RecognitionException {
	JavaNumberContext _localctx = new JavaNumberContext(_ctx, getState());
	enterRule(_localctx, 30, RULE_javaNumber);
	int _la;
	try {
	  int _alt;
	  setState(158);
	  _errHandler.sync(this);
	  switch (getInterpreter().adaptivePredict(_input, 17, _ctx)) {
		case 1:
		  enterOuterAlt(_localctx, 1);
		{
		  setState(102);
		  _errHandler.sync(this);
		  _la = _input.LA(1);
		  if (_la == OP_ADD || _la == OP_MINUS) {
			{
			  setState(101);
			  javaNumberSign();
			}
		  }

		  setState(105);
		  _errHandler.sync(this);
		  _alt = 1;
		  do {
			switch (_alt) {
			  case 1: {
				{
				  setState(104);
				  match(DIGIT);
				}
			  }
			  break;
			  default:
				throw new NoViableAltException(this);
			}
			setState(107);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
		  } while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
		  setState(110);
		  _errHandler.sync(this);
		  _la = _input.LA(1);
		  if (_la == T__0) {
			{
			  setState(109);
			  match(T__0);
			}
		  }

		  setState(115);
		  _errHandler.sync(this);
		  _la = _input.LA(1);
		  while (_la == DIGIT) {
			{
			  {
				setState(112);
				match(DIGIT);
			  }
			}
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
		  }
		  setState(119);
		  _errHandler.sync(this);
		  _la = _input.LA(1);
		  if (_la == T__1 || _la == T__2) {
			{
			  setState(118);
			  javaNumberExponential();
			}
		  }

		}
		break;
		case 2:
		  enterOuterAlt(_localctx, 2);
		{
		  setState(122);
		  _errHandler.sync(this);
		  _la = _input.LA(1);
		  if (_la == OP_ADD || _la == OP_MINUS) {
			{
			  setState(121);
			  javaNumberSign();
			}
		  }

		  setState(130);
		  _errHandler.sync(this);
		  switch (getInterpreter().adaptivePredict(_input, 10, _ctx)) {
			case 1: {
			  setState(125);
			  _errHandler.sync(this);
			  _la = _input.LA(1);
			  do {
				{
				  {
					setState(124);
					match(DIGIT);
				  }
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			  } while (_la == DIGIT);
			  setState(129);
			  match(T__0);
			}
			break;
		  }
		  setState(133);
		  _errHandler.sync(this);
		  _la = _input.LA(1);
		  do {
			{
			  {
				setState(132);
				match(DIGIT);
			  }
			}
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
		  } while (_la == DIGIT);
		  setState(138);
		  _errHandler.sync(this);
		  _la = _input.LA(1);
		  if (_la == T__1 || _la == T__2) {
			{
			  setState(137);
			  javaNumberExponential();
			}
		  }

		}
		break;
		case 3:
		  enterOuterAlt(_localctx, 3);
		{
		  setState(141);
		  _errHandler.sync(this);
		  _la = _input.LA(1);
		  if (_la == OP_ADD || _la == OP_MINUS) {
			{
			  setState(140);
			  javaNumberSign();
			}
		  }

		  setState(146);
		  _errHandler.sync(this);
		  _la = _input.LA(1);
		  while (_la == DIGIT) {
			{
			  {
				setState(143);
				match(DIGIT);
			  }
			}
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
		  }
		  setState(149);
		  match(T__0);
		  setState(151);
		  _errHandler.sync(this);
		  _la = _input.LA(1);
		  do {
			{
			  {
				setState(150);
				match(DIGIT);
			  }
			}
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
		  } while (_la == DIGIT);
		  setState(156);
		  _errHandler.sync(this);
		  _la = _input.LA(1);
		  if (_la == T__1 || _la == T__2) {
			{
			  setState(155);
			  javaNumberExponential();
			}
		  }

		}
		break;
	  }
	} catch (RecognitionException re) {
	  _localctx.exception = re;
	  _errHandler.reportError(this, re);
	  _errHandler.recover(this, re);
	} finally {
	  exitRule();
	}
	return _localctx;
  }

  public final JavaNumberExponentialContext javaNumberExponential() throws RecognitionException {
	JavaNumberExponentialContext _localctx = new JavaNumberExponentialContext(_ctx, getState());
	enterRule(_localctx, 32, RULE_javaNumberExponential);
	int _la;
	try {
	  enterOuterAlt(_localctx, 1);
	  {
		setState(160);
		_la = _input.LA(1);
		if (!(_la == T__1 || _la == T__2)) {
		  _errHandler.recoverInline(this);
		} else {
		  if (_input.LA(1) == Token.EOF) matchedEOF = true;
		  _errHandler.reportMatch(this);
		  consume();
		}
		setState(162);
		_errHandler.sync(this);
		_la = _input.LA(1);
		if (_la == OP_ADD || _la == OP_MINUS) {
		  {
			setState(161);
			javaNumberSign();
		  }
		}

		setState(165);
		_errHandler.sync(this);
		_la = _input.LA(1);
		do {
		  {
			{
			  setState(164);
			  match(DIGIT);
			}
		  }
		  setState(167);
		  _errHandler.sync(this);
		  _la = _input.LA(1);
		} while (_la == DIGIT);
	  }
	} catch (RecognitionException re) {
	  _localctx.exception = re;
	  _errHandler.reportError(this, re);
	  _errHandler.recover(this, re);
	} finally {
	  exitRule();
	}
	return _localctx;
  }

  public final JavaNumberSignContext javaNumberSign() throws RecognitionException {
	JavaNumberSignContext _localctx = new JavaNumberSignContext(_ctx, getState());
	enterRule(_localctx, 34, RULE_javaNumberSign);
	int _la;
	try {
	  enterOuterAlt(_localctx, 1);
	  {
		setState(169);
		_la = _input.LA(1);
		if (!(_la == OP_ADD || _la == OP_MINUS)) {
		  _errHandler.recoverInline(this);
		} else {
		  if (_input.LA(1) == Token.EOF) matchedEOF = true;
		  _errHandler.reportMatch(this);
		  consume();
		}
	  }
	} catch (RecognitionException re) {
	  _localctx.exception = re;
	  _errHandler.reportError(this, re);
	  _errHandler.recover(this, re);
	} finally {
	  exitRule();
	}
	return _localctx;
  }

  public final ExpressionsContext expressions() throws RecognitionException {
	ExpressionsContext _localctx = new ExpressionsContext(_ctx, getState());
	enterRule(_localctx, 36, RULE_expressions);
	int _la;
	try {
	  enterOuterAlt(_localctx, 1);
	  {
		setState(171);
		expression();
		setState(176);
		_errHandler.sync(this);
		_la = _input.LA(1);
		while (_la == SEMI_COLUMN) {
		  {
			{
			  setState(172);
			  match(SEMI_COLUMN);
			  setState(173);
			  expression();
			}
		  }
		  setState(178);
		  _errHandler.sync(this);
		  _la = _input.LA(1);
		}
	  }
	} catch (RecognitionException re) {
	  _localctx.exception = re;
	  _errHandler.reportError(this, re);
	  _errHandler.recover(this, re);
	} finally {
	  exitRule();
	}
	return _localctx;
  }

  public final ExpressionContext expression() throws RecognitionException {
	ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
	enterRule(_localctx, 38, RULE_expression);
	try {
	  setState(187);
	  _errHandler.sync(this);
	  switch (_input.LA(1)) {
		case LETTER:
		  enterOuterAlt(_localctx, 1);
		{
		  setState(179);
		  variable();
		}
		break;
		case DIGIT:
		  enterOuterAlt(_localctx, 2);
		{
		  setState(180);
		  number();
		}
		break;
		case PAR_OPEN:
		  enterOuterAlt(_localctx, 3);
		{
		  setState(181);
		  match(PAR_OPEN);
		  setState(182);
		  expression();
		  setState(183);
		  operator();
		  setState(184);
		  expression();
		  setState(185);
		  match(PAR_CLOSE);
		}
		break;
		default:
		  throw new NoViableAltException(this);
	  }
	} catch (RecognitionException re) {
	  _localctx.exception = re;
	  _errHandler.reportError(this, re);
	  _errHandler.recover(this, re);
	} finally {
	  exitRule();
	}
	return _localctx;
  }

  public final OperatorContext operator() throws RecognitionException {
	OperatorContext _localctx = new OperatorContext(_ctx, getState());
	enterRule(_localctx, 40, RULE_operator);
	int _la;
	try {
	  enterOuterAlt(_localctx, 1);
	  {
		setState(189);
		_la = _input.LA(1);
		if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OP_ADD) | (1L << OP_MINUS) | (1L << OP_MUL) | (1L << OP_DIV) | (1L << OP_POW))) != 0))) {
		  _errHandler.recoverInline(this);
		} else {
		  if (_input.LA(1) == Token.EOF) matchedEOF = true;
		  _errHandler.reportMatch(this);
		  consume();
		}
	  }
	} catch (RecognitionException re) {
	  _localctx.exception = re;
	  _errHandler.reportError(this, re);
	  _errHandler.recover(this, re);
	} finally {
	  exitRule();
	}
	return _localctx;
  }

  public final VariableContext variable() throws RecognitionException {
	VariableContext _localctx = new VariableContext(_ctx, getState());
	enterRule(_localctx, 42, RULE_variable);
	int _la;
	try {
	  enterOuterAlt(_localctx, 1);
	  {
		setState(191);
		match(LETTER);
		setState(195);
		_errHandler.sync(this);
		_la = _input.LA(1);
		while (_la == DIGIT || _la == LETTER) {
		  {
			{
			  setState(192);
			  _la = _input.LA(1);
			  if (!(_la == DIGIT || _la == LETTER)) {
				_errHandler.recoverInline(this);
			  } else {
				if (_input.LA(1) == Token.EOF) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			  }
			}
		  }
		  setState(197);
		  _errHandler.sync(this);
		  _la = _input.LA(1);
		}
	  }
	} catch (RecognitionException re) {
	  _localctx.exception = re;
	  _errHandler.reportError(this, re);
	  _errHandler.recover(this, re);
	} finally {
	  exitRule();
	}
	return _localctx;
  }

  public final NumberContext number() throws RecognitionException {
	NumberContext _localctx = new NumberContext(_ctx, getState());
	enterRule(_localctx, 44, RULE_number);
	int _la;
	try {
	  enterOuterAlt(_localctx, 1);
	  {
		setState(199);
		_errHandler.sync(this);
		_la = _input.LA(1);
		do {
		  {
			{
			  setState(198);
			  match(DIGIT);
			}
		  }
		  setState(201);
		  _errHandler.sync(this);
		  _la = _input.LA(1);
		} while (_la == DIGIT);
		setState(209);
		_errHandler.sync(this);
		_la = _input.LA(1);
		if (_la == T__0) {
		  {
			setState(203);
			match(T__0);
			setState(205);
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
			  {
				{
				  setState(204);
				  match(DIGIT);
				}
			  }
			  setState(207);
			  _errHandler.sync(this);
			  _la = _input.LA(1);
			} while (_la == DIGIT);
		  }
		}

	  }
	} catch (RecognitionException re) {
	  _localctx.exception = re;
	  _errHandler.reportError(this, re);
	  _errHandler.recover(this, re);
	} finally {
	  exitRule();
	}
	return _localctx;
  }

  public static class ParseContext extends ParserRuleContext {
	public ParseContext(ParserRuleContext parent, int invokingState) {
	  super(parent, invokingState);
	}

	public CommandContext command() {
	  return getRuleContext(CommandContext.class, 0);
	}

	public TerminalNode EOF() {
	  return getToken(RequestGrammarParser.EOF, 0);
	}

	@Override
	public int getRuleIndex() {
	  return RULE_parse;
	}

	@Override
	public void enterRule(ParseTreeListener listener) {
	  if (listener instanceof RequestGrammarListener) ((RequestGrammarListener) listener).enterParse(this);
	}

	@Override
	public void exitRule(ParseTreeListener listener) {
	  if (listener instanceof RequestGrammarListener) ((RequestGrammarListener) listener).exitParse(this);
	}

	@Override
	public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
	  if (visitor instanceof RequestGrammarVisitor)
		return ((RequestGrammarVisitor<? extends T>) visitor).visitParse(this);
	  else return visitor.visitChildren(this);
	}
  }

  public static class CommandContext extends ParserRuleContext {
	public CommandContext(ParserRuleContext parent, int invokingState) {
	  super(parent, invokingState);
	}

	public QuitRequestContext quitRequest() {
	  return getRuleContext(QuitRequestContext.class, 0);
	}

	public StatRequestContext statRequest() {
	  return getRuleContext(StatRequestContext.class, 0);
	}

	public ComputationRequestContext computationRequest() {
	  return getRuleContext(ComputationRequestContext.class, 0);
	}

	@Override
	public int getRuleIndex() {
	  return RULE_command;
	}

	@Override
	public void enterRule(ParseTreeListener listener) {
	  if (listener instanceof RequestGrammarListener) ((RequestGrammarListener) listener).enterCommand(this);
	}

	@Override
	public void exitRule(ParseTreeListener listener) {
	  if (listener instanceof RequestGrammarListener) ((RequestGrammarListener) listener).exitCommand(this);
	}

	@Override
	public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
	  if (visitor instanceof RequestGrammarVisitor)
		return ((RequestGrammarVisitor<? extends T>) visitor).visitCommand(this);
	  else return visitor.visitChildren(this);
	}
  }

  public static class QuitRequestContext extends ParserRuleContext {
	public QuitRequestContext(ParserRuleContext parent, int invokingState) {
	  super(parent, invokingState);
	}

	public TerminalNode BYE() {
	  return getToken(RequestGrammarParser.BYE, 0);
	}

	@Override
	public int getRuleIndex() {
	  return RULE_quitRequest;
	}

	@Override
	public void enterRule(ParseTreeListener listener) {
	  if (listener instanceof RequestGrammarListener) ((RequestGrammarListener) listener).enterQuitRequest(this);
	}

	@Override
	public void exitRule(ParseTreeListener listener) {
	  if (listener instanceof RequestGrammarListener) ((RequestGrammarListener) listener).exitQuitRequest(this);
	}

	@Override
	public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
	  if (visitor instanceof RequestGrammarVisitor)
		return ((RequestGrammarVisitor<? extends T>) visitor).visitQuitRequest(this);
	  else return visitor.visitChildren(this);
	}
  }

  public static class StatRequestContext extends ParserRuleContext {
	public StatRequestContext(ParserRuleContext parent, int invokingState) {
	  super(parent, invokingState);
	}

	public StatReqsCommandContext statReqsCommand() {
	  return getRuleContext(StatReqsCommandContext.class, 0);
	}

	public StatAvgCommandContext statAvgCommand() {
	  return getRuleContext(StatAvgCommandContext.class, 0);
	}
